# disk-cleanup-advisor

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_scan.csv  sample_scan.html  sample_scan.json
src/disk_cleanup_advisor/: __init__.py  cli.py
tests/: test_disk_cleanup_advisor.py
