[project]
name = "disk-cleanup-advisor"
version = "0.1.0"
description = "A conservative Windows disk scanner that reports what is using space and gates permanent deletion behind explicit confirmation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "shj204", email = "213327685@qq.com" }
]
keywords = ["disk", "cleanup", "windows", "scanner", "storage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows"
]

[project.scripts]
disk-cleanup-advisor = "disk_cleanup_advisor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
